文件管理模块完成

--- a/src/main/resources/projectConfig.properties
+++ b/src/main/resources/projectConfig.properties
@@ -8,3 +8,8 @@ noticeFileAddress=D:/file/notice/
 headPortraits=/file/headPortraits/
 #头像文件存储地址
 headPortraitsAddress=D:/file/headPortraits/
+#用户文件地址
+userFile=/file/userFile/
+#用户文件存储地址
+userFileAddress=D:/file/userFile/
+
