发帖功能完成

--- a/src/main/resources/projectConfig.properties
+++ b/src/main/resources/projectConfig.properties
@@ -12,4 +12,8 @@ headPortraitsAddress=D:/file/headPortraits/
 userFile=/file/userFile/
 #用户文件存储地址
 userFileAddress=D:/file/userFile/
+#文章图片地址
+articleFile=/file/articleFile
+#文章图片的存储地址
+articleFileAddress=D:/file/articleFile/
 
