回复文章实现

--- a/src/main/resources/projectConfig.properties
+++ b/src/main/resources/projectConfig.properties
@@ -2,6 +2,8 @@
 serverAddress=http://localhost:8081
 #通知文件地址
 noticeFile=/file/notice/
+#项目名称
+projectName=/oasystem
 #通知文件存储地址
 noticeFileAddress=D:/file/notice/
 #头像地址
@@ -13,7 +15,7 @@ userFile=/file/userFile/
 #用户文件存储地址
 userFileAddress=D:/file/userFile/
 #文章图片地址
-articleFile=/file/articleFile
+articleFile=/file/articleFile/
 #文章图片的存储地址
 articleFileAddress=D:/file/articleFile/
 
