--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 server.servlet.context-path=/oasystem
 #数据库连接
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/oasystem?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://47.100.213.102:3306/oasystem?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 # 用druid替换默认数据源
