发起任务 任务列表 删除任务完成

--- a/src/main/resources/projectConfig.properties
+++ b/src/main/resources/projectConfig.properties
@@ -18,4 +18,8 @@ userFileAddress=D:/file/userFile/
 articleFile=/file/articleFile/
 #文章图片的存储地址
 articleFileAddress=D:/file/articleFile/
+#审批文件地址
+applyFile=/file/applyFile/
+#审批文件存储地址
+applyFileAddress=D:/file/applyFile/
 
