--- a/src/main/resources/projectConfig.properties
+++ b/src/main/resources/projectConfig.properties
@@ -1,25 +1,25 @@
 #服务器地址
-serverAddress=http://localhost:8081
+serverAddress=https://www.98guangzheng.com
 #通知文件地址
 noticeFile=/file/notice/
 #项目名称
 projectName=/oasystem
 #通知文件存储地址
-noticeFileAddress=D:/file/notice/
+noticeFileAddress=/file/notice/
 #头像地址
 headPortraits=/file/headPortraits/
 #头像文件存储地址
-headPortraitsAddress=D:/file/headPortraits/
+headPortraitsAddress=/file/headPortraits/
 #用户文件地址
 userFile=/file/userFile/
 #用户文件存储地址
-userFileAddress=D:/file/userFile/
+userFileAddress=/file/userFile/
 #文章图片地址
 articleFile=/file/articleFile/
 #文章图片的存储地址
-articleFileAddress=D:/file/articleFile/
+articleFileAddress=/file/articleFile/
 #审批文件地址
 applyFile=/file/applyFile/
 #审批文件存储地址
-applyFileAddress=D:/file/applyFile/
+applyFileAddress=/file/applyFile/
 
