--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 #项目端口号
-server.port=8081
+server.port=443
 server.servlet.context-path=/oasystem
+
+#SSL证书路径 一定要加上classpath:
+server.ssl.key-store=classpath:98guangzheng.jks
+#SSL证书密码
+server.ssl.key-store-password=YqTvyOMk
+#证书类型
+server.ssl.key-store-type=JKS
+#证书别名
+server.ssl.key-alias=alias
 #数据库连接
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.100.213.102:3306/oasystem?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/oasystem?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 # 用druid替换默认数据源
