服务器部署

--- a/src/main/resources/projectConfig.properties
+++ b/src/main/resources/projectConfig.properties
@@ -1,5 +1,5 @@
 #服务器地址
-serverAddress=https://www.98guangzheng.com
+serverAddress=http://www.98guangzheng.xyz:8080
 #通知文件地址
 noticeFile=/file/notice/
 #项目名称
@@ -9,7 +9,7 @@ noticeFileAddress=/file/notice/
 #头像地址
 headPortraits=/file/headPortraits/
 #头像文件存储地址
-headPortraitsAddress=/file/headPortraits/
+    headPortraitsAddress=/file/headPortraits/
 #用户文件地址
 userFile=/file/userFile/
 #用户文件存储地址
